Set up sidebar content

--- a/index.html
+++ b/index.html
@@ -14,28 +14,70 @@
 
     <body>
         <div class="dashboard-left">
-            <h1>Dashboard</h1>
+            <header>
+                <img src="./images/sidebar-images/view-dashboard-outline.svg" alt="Dashboard icon">
+                <h1>Dashboard</h1>
+
+            </header>
+
             <div class="sidebar-top">
-                <div class="home">Home</div>
-                <div class="profile">Profile</div>
-                <div class="messages">Messages</div>
-                <div class="history">History</div>
-                <div class="tasks">Tasks</div>
-                <div class="communities">Communities</div>
+                <div class="home">
+                    <img src="./images/sidebar-images/home-outline.svg" alt="Home icon">
+                    Home
+                </div>
+                <div class="profile">
+                    <img src="./images/sidebar-images/account-box.svg" alt="Profile icon">
+                    Profile
+                </div>
+                <div class="messages">
+                    <img src="./images/sidebar-images/message-outline.svg" alt="Messages icon">
+                    Messages
+                </div>
+                <div class="history">
+                    <img src="./images/sidebar-images/history.svg" alt="History icon">
+                    History
+                </div>
+                <div class="tasks">
+                    <img src="./images/sidebar-images/file-multiple.svg" alt="Tasks icon">
+                    Tasks
+                </div>
+                <div class="communities">
+                    <img src="./images/sidebar-images/account-group-outline.svg" alt="Communities icon">
+                    Communities
+                </div>
 
             </div>
             <div class="sidebar-bottom">
-                <div class="settings">Settings</div>
-                <div class="support">Support</div>
-                <div class="privacy">Privacy</div>
+                <div class="settings">
+                    <img src="./images/sidebar-images/cog.svg" alt="Settings icon">
+                    Settings
+                </div>
+                <div class="support">
+                    <img src="./images/sidebar-images/help-circle.svg" alt="Support icon">
+                    Support
+                </div>
+                <div class="privacy">
+                    <img src="./images/sidebar-images/shield-account.svg" alt="Privacy icon">
+                    Privacy
+                </div>
 
             </div>
         </div>
+
         <div class="dashboard-top">
-            <div class="search-bar">
-                <div class="notification-bell"></div>
-                <div class="icon">Placeholder for image</div>
-                <div class="name">John Doe</div>
+            <div class="search">
+
+                <div class="search-left">
+                    <img>
+                    .search-bar
+                </div>
+
+                <div class="search-right">
+                    <div class="notification-bell"></div>
+                    <div class="icon">Placeholder for image</div>
+                    <div class="name">John Doe</div>
+                </div>
+
             </div>
 
             <div class="welcome-message">
