Finish initial styling of dashboard's top

--- a/index.html
+++ b/index.html
@@ -68,21 +68,28 @@
             <div class="search">
 
                 <div class="search-left">
-                    <img>
-                    .search-bar
+
+                    <img src="./images/dashboard-top-images/magnify.svg" alt="search icon">
+                    <div class="search-bar"></div>
                 </div>
 
                 <div class="search-right">
-                    <div class="notification-bell"></div>
-                    <div class="icon">Placeholder for image</div>
+                    <img src="./images/dashboard-top-images/bell-ring.svg" alt="notification icon">
+                    <div class="user-image-small">
+                        <img src="./images/dashboard-top-images/penguin.png" alt="penguin image">
+                    </div>
                     <div class="name">John Doe</div>
+
                 </div>
 
             </div>
 
-            <div class="welcome-message">
-                <div class="image">Placeholder for image</div>
-                <div class="name">
+            <div class="welcome-section">
+                <div class="user-image-big">
+                    <img src="./images/dashboard-top-images/penguin.png" alt="penguin image">
+                </div>
+
+                <div class="welcome-message">
                     <span>Hi there,</span>
                     <span>John Doe (@John)</span>
                 </div>
