Set up initial grid-container for dashboard's center

--- a/index.html
+++ b/index.html
@@ -107,72 +107,78 @@
         </div>
 
         <div class="dashboard-center">
-            <div class="your-projects">
-                <div>
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
 
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
-
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
-
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
-
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
-
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div class="icons">
-                            <div class="star"></div>
-                            <div class="watch"></div>
-                            <div class="share"></div>
-                        </div>
-                    </article>
-                </div>
+            <div class="articles-heading">
+                Your Projects
             </div>
 
-            <div class="announcements">
-                <h2>Announcements</h2>
+            <div class="articles-container">
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2></h2>
+                    <p></p>
+                    <div class="icons">
+                        <div class="star"></div>
+                        <div class="watch"></div>
+                        <div class="share"></div>
+                    </div>
+                </article>
+            </div>
+
+            <div class="announcements-heading">
+                Announcements
+            </div>
+
+            <div class="announcements-container">
                 <div class="an-top">
                     <h4>Site Maintenance</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil reiciendis, incidunt repellat
@@ -180,11 +186,13 @@
                         corporis error. Error ipsam impedit eaque expedita molestias quia, cupiditate, natus nulla,
                         voluptatum autem a illo architecto.</p>
                 </div>
+
                 <div class="an-mid">
                     <h4>Community Share Day</h4>
                     <p>Inventore officia natus culpa quasi quis aperiam dolorem repudiandae ducimus voluptatum. Earum,
                         ducimus!</p>
                 </div>
+
                 <div class="an-end">
                     <h4>Updated Terms and Conditions</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos exercitationem modi
@@ -195,11 +203,18 @@
                 </div>
             </div>
 
-            <div class="trending">
-                <div class="person-1">@RandomP</div>
-                <div class="person-2">@John</div>
-                <div class="person-3">@BenD</div>
-                <div class="person-4">@Laura</div>
+            <div class="trending-container">
+                <div class="trending-heading">
+                    Trending
+                </div>
+
+                <div class="trending-people">
+                    <div class="person-1">@RandomP</div>
+                    <div class="person-2">@John</div>
+                    <div class="person-3">@BenD</div>
+                    <div class="person-4">@Laura</div>
+                </div>
+
             </div>
         </div>
 
