Finish setting up article grid and articles style

--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
             <div class="sidebar-top">
                 <div class="home">
                     <img src="./images/sidebar-images/home-outline.svg" alt="Home icon">
-                    Home
+                    <a href="#">Home</a>
                 </div>
                 <div class="profile">
                     <img src="./images/sidebar-images/account-box.svg" alt="Profile icon">
-                    Profile
+                    <a href="#">Profile</a>
                 </div>
                 <div class="messages">
                     <img src="./images/sidebar-images/message-outline.svg" alt="Messages icon">
-                    Messages
+                    <a href="#">Messages</a>
                 </div>
                 <div class="history">
                     <img src="./images/sidebar-images/history.svg" alt="History icon">
-                    History
+                    <a href="#">History</a>
                 </div>
                 <div class="tasks">
                     <img src="./images/sidebar-images/file-multiple.svg" alt="Tasks icon">
-                    Tasks
+                    <a href="#">Tasks</a>
                 </div>
                 <div class="communities">
                     <img src="./images/sidebar-images/account-group-outline.svg" alt="Communities icon">
-                    Communities
+                    <a href="#">Communities</a>
                 </div>
 
             </div>
             <div class="sidebar-bottom">
                 <div class="settings">
                     <img src="./images/sidebar-images/cog.svg" alt="Settings icon">
-                    Settings
+                    <a href="#">Settings</a>
                 </div>
                 <div class="support">
                     <img src="./images/sidebar-images/help-circle.svg" alt="Support icon">
-                    Support
+                    <a href="#">Support</a>
                 </div>
                 <div class="privacy">
                     <img src="./images/sidebar-images/shield-account.svg" alt="Privacy icon">
-                    Privacy
+                    <a href="#">Privacy</a>
                 </div>
 
             </div>
@@ -78,7 +78,9 @@
                     <div class="user-image-small">
                         <img src="./images/dashboard-top-images/penguin.png" alt="penguin image">
                     </div>
-                    <div class="name">John Doe</div>
+                    <div class="name">
+                        <a href="#">John Doe</a>
+                    </div>
 
                 </div>
 
@@ -98,9 +100,15 @@
             <div class="nav">
                 <nav>
                     <ul>
-                        <li class="btn">New</li>
-                        <li class="btn">Upload</li>
-                        <li class="btn">Share</li>
+                        <li class="btn">
+                            <a href="#">New</a>
+                        </li>
+                        <li class="btn">
+                            <a href="#">Upload</a>
+                        </li>
+                        <li class="btn">
+                            <a href="#">Share</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -114,62 +122,116 @@
 
             <div class="articles-container">
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Super Cool Project</h2>
+                    <p>Et quaerat facere et culpa sunt qui voluptatem repellat ea consequatur perferendis et nemo
+                        galisum At galisum iste hic
+                        consequuntur harum.
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
 
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Also Cool Project</h2>
+                    <p>Ex fugiat magni ut quas tempore aut dignissimos velit sed sunt incidunt sit asperiores omnis aut
+                        illum Quis et eius
+                        consequuntur.
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
 
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Impossibly Amazing App</h2>
+                    <p>Vel rerum tempora et omnis itaque et quae temporibus non perferendis veritatis ut soluta iusto.
+                        Ut cupiditate natus vel
+                        omnis beatae aut sunt modi.
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
 
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Easily the Best App</h2>
+                    <p>
+                        Est consectetur dolorem et dolorem consequuntur non commodi quia id error tenetur eos aliquid
+                        neque. Ea quos voluptates qui odit porro est aliquid repellat et eveniet quasi.
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
 
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Amazing Money Maker</h2>
+                    <p>
+                        Ea ducimus deserunt est esse maiores ut tempora inventore est quisquam iusto. Aut illo tempora
+                        et dignissimos asperiores est commodi vitae et.
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
 
                 <article>
-                    <h2></h2>
-                    <p></p>
+                    <h2>Change Your Life</h2>
+                    <p>
+                        Quo voluptatem earum ex autem unde et nihil quia At itaque omnis! Aut consequatur minima ut
+                        internos obcaecati et molestiae galisum aut deleniti minus ad libero dignissimos?
+                    </p>
                     <div class="icons">
-                        <div class="star"></div>
-                        <div class="watch"></div>
-                        <div class="share"></div>
+                        <div class="star">
+                            <img src="./images/article-images/star-outline.svg" alt="favorite icon">
+                        </div>
+                        <div class="watch">
+                            <img src="./images/article-images/eye-settings.svg" alt="watch icon">
+                        </div>
+                        <div class="share">
+                            <img src="./images/article-images/source-fork.svg" alt="source/fork icon">
+                        </div>
                     </div>
                 </article>
             </div>
