Finish announcement and trending sections

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="search-right">
                     <img src="./images/dashboard-top-images/bell-ring.svg" alt="notification icon">
                     <div class="user-image-small">
-                        <img src="./images/dashboard-top-images/penguin.png" alt="penguin image">
+                        <img src="./images/user-images/penguin.png" alt="penguin image">
                     </div>
                     <div class="name">
                         <a href="#">John Doe</a>
@@ -88,7 +88,7 @@
 
             <div class="welcome-section">
                 <div class="user-image-big">
-                    <img src="./images/dashboard-top-images/penguin.png" alt="penguin image">
+                    <img src="./images/user-images/penguin.png" alt="penguin image">
                 </div>
 
                 <div class="welcome-message">
@@ -116,13 +116,13 @@
 
         <div class="dashboard-center">
 
-            <div class="articles-heading">
+            <h2 class="articles-heading">
                 Your Projects
-            </div>
+            </h2>
 
             <div class="articles-container">
                 <article>
-                    <h2>Super Cool Project</h2>
+                    <h3>Super Cool Project</h3>
                     <p>Et quaerat facere et culpa sunt qui voluptatem repellat ea consequatur perferendis et nemo
                         galisum At galisum iste hic
                         consequuntur harum.
@@ -141,7 +141,7 @@
                 </article>
 
                 <article>
-                    <h2>Also Cool Project</h2>
+                    <h3>Also Cool Project</h3>
                     <p>Ex fugiat magni ut quas tempore aut dignissimos velit sed sunt incidunt sit asperiores omnis aut
                         illum Quis et eius
                         consequuntur.
@@ -160,7 +160,7 @@
                 </article>
 
                 <article>
-                    <h2>Impossibly Amazing App</h2>
+                    <h3>Impossibly Amazing App</h3>
                     <p>Vel rerum tempora et omnis itaque et quae temporibus non perferendis veritatis ut soluta iusto.
                         Ut cupiditate natus vel
                         omnis beatae aut sunt modi.
@@ -179,7 +179,7 @@
                 </article>
 
                 <article>
-                    <h2>Easily the Best App</h2>
+                    <h3>Easily the Best App</h3>
                     <p>
                         Est consectetur dolorem et dolorem consequuntur non commodi quia id error tenetur eos aliquid
                         neque. Ea quos voluptates qui odit porro est aliquid repellat et eveniet quasi.
@@ -198,7 +198,7 @@
                 </article>
 
                 <article>
-                    <h2>Amazing Money Maker</h2>
+                    <h3>Great Money Maker</h3>
                     <p>
                         Ea ducimus deserunt est esse maiores ut tempora inventore est quisquam iusto. Aut illo tempora
                         et dignissimos asperiores est commodi vitae et.
@@ -217,7 +217,7 @@
                 </article>
 
                 <article>
-                    <h2>Change Your Life</h2>
+                    <h3>Change Your Life</h3>
                     <p>
                         Quo voluptatem earum ex autem unde et nihil quia At itaque omnis! Aut consequatur minima ut
                         internos obcaecati et molestiae galisum aut deleniti minus ad libero dignissimos?
@@ -236,45 +236,72 @@
                 </article>
             </div>
 
-            <div class="announcements-heading">
+            <h2 class="announcements-heading">
                 Announcements
-            </div>
+            </h2>
 
             <div class="announcements-container">
                 <div class="an-top">
-                    <h4>Site Maintenance</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil reiciendis, incidunt repellat
-                        deleniti
-                        corporis error. Error ipsam impedit eaque expedita molestias quia, cupiditate, natus nulla,
-                        voluptatum autem a illo architecto.</p>
+                    <h3>Icons Source</h3>
+                    <p>
+                        Icon svgs were obtained from <a href="https://https://pictogrammers.com/library/mdi/">Material
+                            Design Icons</a>.
+                    </p>
                 </div>
 
                 <div class="an-mid">
-                    <h4>Community Share Day</h4>
-                    <p>Inventore officia natus culpa quasi quis aperiam dolorem repudiandae ducimus voluptatum. Earum,
-                        ducimus!</p>
+                    <h3>User Images Source</h3>
+                    <p>
+                        User images were obtained from <a href="https://www.flaticon.com/free-icons/monkey">
+                            flaticon</a>.
+                    </p>
                 </div>
 
                 <div class="an-end">
-                    <h4>Updated Terms and Conditions</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos exercitationem modi
-                        repudiandae!
-                        Provident, cum itaque aut ratione nihil illo veniam nobis magnam ullam eum voluptas qui optio
-                        omnis
-                        doloribus placeat?</p>
+                    <h3>Project Source</h3>
+                    <p>
+                        This dashboard was completed for the Admin Dashboard project section in the Intermediate HTML
+                        and
+                        CSS section.
+                    </p>
                 </div>
             </div>
 
             <div class="trending-container">
-                <div class="trending-heading">
-                    Trending
-                </div>
+                <h2>Trending</h2>
 
-                <div class="trending-people">
-                    <div class="person-1">@RandomP</div>
-                    <div class="person-2">@John</div>
-                    <div class="person-3">@BenD</div>
-                    <div class="person-4">@Laura</div>
+                <div class="trending-people-container">
+                    <div class="trending-person">
+                        <img src="./images/user-images/pawprint.png" alt="paw icon">
+                        <div class="trending-person-description">
+                            <h4>@RandomP</h4>
+                            <p>Great Money Maker</p>
+                        </div>
+
+                    </div>
+                    <div class="trending-person">
+                        <img src="./images/user-images/penguin.png" alt="penguin image">
+                        <div class="trending-person-description">
+                            <h4>@John</h4>
+                            <p>Change your Life</p>
+                        </div>
+
+                    </div>
+                    <div class="trending-person">
+                        <img src="./images/user-images/monkey.png" alt="monkey icon">
+                        <div class="trending-person-description">
+                            <h4>@Ben.D</h4>
+                            <p>Impossibly Amazing App</p>
+                        </div>
+                    </div>
+                    <div class="trending-person">
+                        <img src="./images/user-images/cat-mask.png" alt="cat icon">
+                        <div class="trending-person-description">
+                            <h4>@Laura</h4>
+                            <p>Super Cool Project</p>
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
