Fix fonts and other small errors

--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
                     <p>
                         This dashboard was completed for the Admin Dashboard project section in the Intermediate HTML
                         and
-                        CSS section.
+                        CSS section of <a
+                            href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-admin-dashboard">The
+                            Odin Project</a>.
                     </p>
                 </div>
             </div>
