Fix links in announcements section and make them open in new tab

--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
                 <div class="an-top">
                     <h3>Icons Source</h3>
                     <p>
-                        Icon svgs were obtained from <a href="https://https://pictogrammers.com/library/mdi/">Material
+                        Icon svgs were obtained from <a href="https:pictogrammers.com/library/mdi/"
+                            target="_blank">Material
                             Design Icons</a>.
                     </p>
                 </div>
@@ -252,7 +253,8 @@
                 <div class="an-mid">
                     <h3>User Images Source</h3>
                     <p>
-                        User images were obtained from <a href="https://www.flaticon.com/free-icons/monkey">
+                        User images were obtained from <a href="https://www.flaticon.com/free-icons/monkey"
+                            target="_blank">
                             flaticon</a>.
                     </p>
                 </div>
@@ -263,7 +265,8 @@
                         This dashboard was completed for the Admin Dashboard project section in the Intermediate HTML
                         and
                         CSS section of <a
-                            href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-admin-dashboard">The
+                            href="https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-admin-dashboard"
+                            target="_blank">The
                             Odin Project</a>.
                     </p>
                 </div>
