Fix errors on smaller resolution

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <div class="welcome-message">
                     <span>Hi there,</span>
-                    <span>John Doe (@John)</span>
+                    <span>@John</span>
                 </div>
             </div>
 
